# hackathon-0

./: .gitignore  CLAUDE.md  HACKATHON-ZERO.md  HOW_IT_WORKS.md  README.md  test_twitter.md
My_AI_Employee/: .env.example  QUICKSTART.md  README.md  WORKFLOW.md  __init__.py  config.py  ecosystem.config.js  main.py  orchestrator.py  process_watchdog.py  pyproject.toml  pytest.ini  run_watcher.py  scheduler.py
My_AI_Employee/AI_Employee_Vault/: Business_Goals.md  Company_Handbook.md  Dashboard.md
My_AI_Employee/AI_Employee_Vault/Done/: 20260113_172254_390192_urgent_project_proposal.md  20260113_190317_918263_client_meeting_request.md  20260114_114928_702275_security_audit_request.md  20260114_120743_004457_mobile_app_launch.md
My_AI_Employee/AI_Employee_Vault/Plans/: Plan_mobile_app_launch.md  Plan_security_audit_request.md
My_AI_Employee/approval/: approval_request.py
My_AI_Employee/mcp_servers/: __init__.py  browser_mcp.py  email_mcp.py  facebook_mcp.py  facebook_web_mcp.py  instagram_mcp.py  instagram_web_mcp.py  linkedin_mcp.py  linkedin_web_mcp.py  odoo_mcp.py  twitter_mcp.py  twitter_web_mcp.py
My_AI_Employee/models/: __init__.py  action_item.py  schemas.py
My_AI_Employee/scripts/: README.md  linkedin_oauth2_setup.py  test_linkedin_api.py
My_AI_Employee/scripts/debug/: debug_gmail.py  debug_gmail_send.py  debug_pm2_dashboard.py
My_AI_Employee/scripts/setup/: BROWSER_SETUP_WSL.md  GOLD_TIER_STARTUP.sh  QUICK_SETUP_REMAINING.sh  SOCIAL_MEDIA_SETUP.md  START_RALPH_LOOP.sh  check_all_credentials.py  check_all_credentials.sh  check_twitter_credentials.sh  complete_oauth.py  debug_twitter_login.py  get_instagram_id.sh  init_twitter_simple.py  init_twitter_standalone.py  initialize_social_sessions.ps1  initialize_social_sessions.py  quick_start.sh  setup_gmail_oauth.py  setup_gmail_oauth_manual.py  setup_gmail_oauth_oob.py  setup_odoo.sh  start_gold_tier.sh  test_twitter_api.py  (+5 more)
My_AI_Employee/test_watch_folder/: mobile_app_launch.txt  security_audit_request.txt
My_AI_Employee/tests/: conftest.py  test_watcher_core.py  test_whatsapp_debug.sh  test_whatsapp_full_context.sh  test_whatsapp_now.sh  test_whatsapp_setup.sh  test_whatsapp_unread_only.sh
My_AI_Employee/triage/: __init__.py  handbook_reader.py  plan_generator.py
My_AI_Employee/utils/: __init__.py  audit_logger.py  audit_sanitizer.py  auth_helper.py  credentials.py  dedupe_state.py  frontmatter_utils.py  logger.py  queue_manager.py  retry.py  retry_logic.py  sanitizer.py  validation.py
My_AI_Employee/vault_ops/: __init__.py  action_item_reader.py  dashboard_updater.py  item_archiver.py  plan_writer.py  vault_validator.py
My_AI_Employee/watchers/: __init__.py  base_watcher.py  filesystem_watcher.py  gmail_watcher.py  linkedin_watcher.py  whatsapp_watcher.py
(+189 files in other folders)
