[project]
name = "my-ai-employee"
version = "0.1.0"
description = "Bronze Tier AI Employee - Local-first AI assistant with filesystem monitoring"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
    "python-frontmatter>=1.1.0",
    "python-dotenv>=1.0.0",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["watchers*", "utils*", "vault_ops*", "triage*"]
exclude = ["AI_Employee_Vault*", "test_watch_folder*", "tests*"]
